# lopengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
media/shaders/01.hellow-triangle/: this.fs.glsl  this.vs.glsl
media/shaders/02.hellow-shader/: this.fs.glsl  this.vs.glsl
media/shaders/03.hellow-texture/: this.fs.glsl  this.vs.glsl
media/shaders/04.hellow-transform/: this.fs.glsl  this.vs.glsl
media/shaders/05.hellow-coordinate/: this.fs.glsl  this.vs.glsl
media/shaders/06.hellow-camera/: this.fs.glsl  this.vs.glsl
media/shaders/34.PriorGL-frameBuffer/: this.fs.glsl
media/shaders/quick_use_simple/: this.fs.glsl  this.vs.glsl
media/shaders/test_nv12_to_rgb/: draw_axiss.fs.glsl  this.fs.glsl  this.vs.glsl
media/texture/bmp/: 9.yuv  list.yuvplaylist  skiing.dib
src/: 01.hellow-triangle.cpp  02.hellow-shader.cpp  03.hellow-texture.cpp  04.hellow-transform.cpp  05.hellow-coordinate.cpp  06.hellow-camera.cpp  34.PriorGL-frameBuffer.cpp
src/ch00/: 00.hellow-window.cpp  01.hellow-triangle.cpp  02.hellow-shader.cpp  03.hellow-texture.cpp  04.hellow-transform.cpp  05.hellow-coordinate.cpp  06.hellow-camera.cpp
src/ch03/: 34.PriorGL-frameBuffer.cpp
src/include/ImGUI/: CROP.h  ImGUI_Utils.h  NV122RGB_2Channel.h  NV12_to_RGB.h  Shader_Context.h  blend.h  hdr2sdr.h  pixelRotate.h  resize.h  rgb2nv12.h  transformFilter.h
src/include/Light/: buffer.hpp
src/include/Light/core/: base.hpp
src/include/helper/: OpenGL_Objects.h  OpenGL_Utils.h  color_transform.h  error.h  fps.h  gtest_main_proxy.h  helper.h  macro_util.h  msg_center.h
src/test/: test-pbo.cpp
src/test_frame/: CMakeLists.txt  README.md  quick_use_simple.cpp  test_app.cpp  test_frame_app.cpp  test_main.cpp  test_nv12_to_rgb.cpp
src/test_frame/Light/: openglbuffer.cpp
src/test_frame/glsl/HANDSOUT/: readme.md
src/test_frame/glsl/HANDSOUT/NV122RGB_2C/: NV122RGB_2C.fs.glsl  NV122RGB_2C.vs.glsl
src/test_frame/glsl/HANDSOUT/blend/: blend.fs.glsl  blend.vs.glsl
src/test_frame/glsl/HANDSOUT/crop/: crop.fs.glsl  crop.vs.glsl
src/test_frame/glsl/HANDSOUT/hdr2sdr/: hdr2sdr.fs.bak.frag  hdr2sdr.fs.glsl
src/test_frame/glsl/HANDSOUT/nv12_t0_rgb/: audio_visualization_geometry.frag.glsl  nv12_t0_rgb.fs.glsl  nv12_t0_rgb.vs.glsl
src/test_frame/glsl/HANDSOUT/pixelRotate/: pixelRotate.fs.glsl  pixelRotate.vs.glsl
src/test_frame/glsl/HANDSOUT/resize/: resize.fs.glsl  resize.vs.glsl
src/test_frame/glsl/HANDSOUT/rgb_to_nv12/: rgb_to_nv12.fs.glsl  rgb_to_nv12.vs.glsl
src/test_frame/glsl/HANDSOUT/transformFilter/: transformFilter.fs.glsl
src/test_frame/include/Light/: buffer.hpp
src/test_frame/include/Light/core/: base.hpp
src/test_frame/include/helper/: OpenGL_Utils.h
